.row-table .table-cell.short-description width

--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -1278,6 +1278,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     margin-left: 18.02%;
     padding: 0px 15px 15px;
     padding-right: 8%;
+    width: 85%;
   }
   .row-table .table-cell.short-description .button{
     border-radius: 1px;
