--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -399,7 +399,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     max-width: 100%;
     /*border: 1px solid #e7e6e2;*/
     border: 0;
-    padding: 30px 0 0 0;
+    padding: 20px 0 0 0;
     font-size: 18px;
     margin-bottom: 10px;
     outline: none;
@@ -412,11 +412,18 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     color:#ffffff;
   }
 
-  ::-webkit-input-placeholder {color:#424242;
-  font-style: italic;}
-  ::-moz-placeholder          {color:#424242;}/* Firefox 19+ */
-  :-moz-placeholder           {color:#424242;}/* Firefox 18- */
-  :-ms-input-placeholder      {color:#424242;}
+  ::-webkit-input-placeholder {
+    color:#424242;
+    font-style: italic;
+    opacity:0.9;
+  }
+input:focus::-webkit-input-placeholder {
+    color: #424242;
+    opacity:0.4;
+}
+  ::-moz-placeholder     {color:#424242;}/* Firefox 19+ */
+  :-moz-placeholder      {color:#424242;}/* Firefox 18- */
+  :-ms-input-placeholder {color:#424242;}
 
   .input{
    color:#424242 ;
@@ -711,6 +718,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   line-height: 1.56;
   color: #424242;
   margin-top:10px;
+  outline: none;
 }
 
 .form--sendMail .button {
@@ -727,7 +735,14 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   color: #8a8a8a;
   margin-bottom:30px;
 }
-
+.form--sendMail .button:hover{
+  background-color: #57897c;
+  color:#ffffff;
+ }
+ .form--sendMail:valid .button {
+  background : #57897c;
+  color:#ffffff;
+}
 
 .sendmail-hr {
   box-shadow: 0 0 4px 0 rgba(233, 233, 233, 0.5);
@@ -850,6 +865,10 @@ nav ul li:nth-last-child(2) {
 
 .row-table .table-row .table-cell.more {
   padding-top:32px;
+}
+
+.row-intro p {
+  margin-bottom:20px;
 }
 
  @media (max-width:550px) {
@@ -1774,6 +1793,9 @@ footer,footer a{
    .search-header{right:42px}.bg-logo{display:none}
    .row-intro h2,.row-intro p{
      text-align:center;
+   }
+   .row-intro p{
+    margin-bottom:30px;
    }
    .row-intro a{float:right;margin-right:6px}
    .row-intro h2 {
